--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Hwllo world</h1>
+    <h2>cjimkandi sale</h2>
+    <p>this is Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+         Laboriosam sed tempora beatae soluta quas debitis quis magni maiores fuga voluptatibus, unde veniam eius 
+        itaque consequuntur voluptas saepe, atque, fugiat sunt!</p>
     
 </body>
 </html>
